--- a/src/lib/Cover/styles.scss
+++ b/src/lib/Cover/styles.scss
@@ -1,3 +1,27 @@
 .cover {
-
+  position: relative;
+  
+  .front {
+    .header {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+    
+    .mask {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.2);
+      opacity: 0;
+      
+      &.active {
+        opacity: 0.5;
+      }
+    }
+  }
 }
