--- a/src/lib/Cover/styles.scss
+++ b/src/lib/Cover/styles.scss
@@ -9,22 +9,19 @@
     // Header for progress bar
     .header {
       display: flex;
-      align-items: center;
-      position: absolute;
+      justify-content: center;
       top: 0;
       left: 0;
       width: 100%;
-      height: 10%;
+      padding: 4px 0;
       background-color: black;
-      padding: 2px;
       
       > .track {
-        width: 100%;
+        width: 90%;
         height: 2px;
         background-color: #ddd;
         
         > .progress {
-          width: 100%;
           height: 100%;
           background-color: white;
         }
