--- a/src/lib/Cover/styles.scss
+++ b/src/lib/Cover/styles.scss
@@ -7,7 +7,7 @@
   
   .cover {
     opacity: 0;
-    transition: opacity 0.3s;
+    transition: opacity 0.5s;
   
     // Header for progress bar
     .header {
@@ -36,5 +36,10 @@
     .sprite {
       position: absolute;
     }
+  }
+  
+  .content {
+    opacity: 1;
+    transition: opacity 0.5s;
   }
 }
