--- a/src/lib/Cover/styles.scss
+++ b/src/lib/Cover/styles.scss
@@ -26,7 +26,7 @@
       > .track {
         width: 90%;
         height: 2px;
-        background-color: #ddd;
+        background-color: #717171;
         
         > .progress {
           height: 100%;
