feat: add custom cover

--- a/src/lib/Cover/styles.scss
+++ b/src/lib/Cover/styles.scss
@@ -38,6 +38,13 @@
     .sprite {
       position: absolute;
     }
+    
+    .custom-cover {
+      position: absolute;
+      top: 6px;
+      bottom: 0;
+      width: 100%;
+    }
   }
   
   .content {
