--- a/src/lib/SpritePreview/styles.scss
+++ b/src/lib/SpritePreview/styles.scss
@@ -10,6 +10,7 @@
   .cover {
     opacity: 0;
     transition: opacity 0.5s;
+    background-color: rgba(0, 0, 0, 0.5);
   
     // Header for progress bar
     .header {
