--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,17 @@
+.tag {
+  padding: 0 4px;
+  border-radius: 2px;
+  background: #fb7299;
+  color: #fff;
+  font-size: 12px;
+  line-height: 18px;
+  text-align: center;
+  position: absolute;
+  right: 8px;
+  top: 8px;
+  z-index: 3;
+}
+
 .duration {
   position: absolute;
   bottom: 0;
